--- a/basics.html
+++ b/basics.html
@@ -27,5 +27,9 @@
       <li>You should be noticing things is this precise order, because this is
           an ordered list</li>
     </ol>
+
+    <h2>Inline Elements</h2>
+    <p><em>Sometimes</em>, you need to draw attention to a particular word or
+       phrase.</p>
   </body>
 </html>
