absolute, relative, and root-relative links

--- a/links-and-images/misc/extras.html
+++ b/links-and-images/misc/extras.html
@@ -5,5 +5,9 @@
   </head>
   <body>
     <h1>Extras</h1>
+    <!-- They’re best for referring to resources in the same folder or in a standalone section of your website. -->
+    <p>This page is about miscellaneous HTML things, but you may also be
+       interested in <a href='../links.html'>links</a> or <a
+       href='../images.html'>images</a>.</p>
   </body>
 </html>
