--- a/links-and-images/links.html
+++ b/links-and-images/links.html
@@ -7,5 +7,17 @@
     <h1>Links</h1>
 
     <p>This example is about links and <a href='images.html'>images</a>.</p>
+
+    <p>This particular page is about links! There are three kinds of links:</p>
+    <ul>
+      <!-- It’s usually a better idea to reserve absolute links only for directing users to a different website. -->
+      <li>Absolute links, like to
+        <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>Mozilla
+        Developer Network</a>, which is a very good resource for web
+        developers.</li>
+
+      <li>Relative links, like to our <a href='misc/extras.html'>extras page
+        </a>.</li>
+    </ul>
   </body>
 </html>
