--- a/links-and-images/links.html
+++ b/links-and-images/links.html
@@ -12,9 +12,9 @@
     <ul>
       <!-- It’s usually a better idea to reserve absolute links only for directing users to a different website. -->
       <li>Absolute links, like to
-        <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'>Mozilla
-        Developer Network</a>, which is a very good resource for web
-        developers.</li>
+        <a href='https://developer.mozilla.org/en-US/docs/Web/HTML'
+           target='_blank'>Mozilla Developer Network</a>, which is a very good
+           resource for web developers.</li>
 
       <li>Relative links, like to our <a href='misc/extras.html'>extras page
         </a>.</li>
