--- a/links-and-images/images.html
+++ b/links-and-images/images.html
@@ -19,7 +19,7 @@
 
     <h2>PNGs</h2>
     <p>PNGs are good for diagrams and icons.</p>
-    <img src='images/mochi.png'/>
+    <img src='images/mochi.png' width='75'/>
 
     <h2>SVGs</h2>
     <p>SVGs are <em>amazing</em>. Use them wherever you can.</p>
